Fixed an issue where posts and comments would not wrap beyond the container

--- a/src/components/Comment/index.scss
+++ b/src/components/Comment/index.scss
@@ -65,6 +65,7 @@
     text-align: start;
     line-height: 3rem;
     margin-bottom: 2rem;
+    white-space: pre-wrap;
 
     .img_list {
       display: flex;
